# docs/swagger.json
@@ -18,8 +18,56 @@
         },
         "version": "1.0"
     },
-    "basePath": "/",
+    "basePath": "/pdf",
     "paths": {
+        "/pdf/encrypt": {
+            "post": {
+                "description": "Encrypts a pdf file",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "PDF Tools"
+                ],
+                "summary": "Encrypt pdf",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "pdf file to encrypt",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "file password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/pdf/generate": {
             "post": {
                 "description": "Generate a new pdf file from a html string",
@@ -30,7 +78,7 @@
                     "application/octet-stream"
                 ],
                 "tags": [
-                    "pdf"
+                    "PDF Generator"
                 ],
                 "summary": "Create a pdf",
                 "parameters": [
@@ -73,7 +121,7 @@
                     "application/octet-stream"
                 ],
                 "tags": [
-                    "pdf"
+                    "PDF Tools"
                 ],
                 "summary": "Merge pdfs",
                 "parameters": [
